Just kept CNAME

--- a/main.html
+++ b/main.html
@@ -29,18 +29,18 @@
     <header id="header" class="clearfix">
       <div class="main_title fl">
         <div class="logo fl">
-          <a target="_blank" href="https://shop60459643.taobao.com"> <i class="red"></i> <i class="blue"></i>
+          <a target="_blank" href="https://aphey.wang"> <i class="red"></i> <i class="blue"></i>
             <i class="green"></i>
           </a>
         </div>
         <div class="fl title-txt">
-          <h1>醉牛前端</h1>
-          <span>最专业&nbsp;&nbsp;最懂你</span>
+          <h1>Aphey</h1>
+          <span>Recording the learning</span>
         </div>
       </div>
-      <h2 class="slogan fr">
-        做专业的前端平台，提供你需要的东西
-        <br>解放你的收藏夹，让它们只做最重要的事情</h2>
+      <!--<h2 class="slogan fr">-->
+        <!--做专业的前端平台，提供你需要的东西-->
+        <!--<br>解放你的收藏夹，让它们只做最重要的事情</h2>-->
     </header>
     <!-- 头部 ]] -->
     <!-- 内容区 [[ -->
