Just kept CNAME

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="keywords" content="醉牛前端，前端人的自留地，资源导航">
+  <meta name="keywords" content="aphey.wang">
   <meta name="format-detection" content="telephone=no">
-  <meta name="description" content="涉及一些优秀攻城狮的优秀博客、社区，实用的手册、工具，框架/库，以及在线教程和书籍推荐。为大家解决一些基本的，常见的问题和需求做专业的前端平台，提供你需要的东西。解放你的收藏夹，让它们只做最主要的事情">
-  <meta name="author" content="创汇网校">
+  <meta name="description" content="记录我的学习历程">
+  <meta name="author" content="苏北阿飞">
   <link rel="shortcut icon" href="res/favicon.ico">
-  <title>前端人的自留地</title>
+  <title>MSR</title>
   <script src="http://hm.baidu.com/hm.js?a75b20e2c0f722c6e4bf18380088449f"></script><script src="res/html5shiv.js"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link type="text/css" rel="stylesheet" href="res/reset.css">
@@ -29,7 +29,7 @@
     <header id="header" class="clearfix">
       <div class="main_title fl">
         <div class="logo fl">
-          <a target="_blank" href="https://aphey.wang"> <i class="red"></i> <i class="blue"></i>
+          <a target="_blank" href="http://aphey.wang"> <i class="red"></i> <i class="blue"></i>
             <i class="green"></i>
           </a>
         </div>
