Just kept CNAME

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
       </div>
       <!--<h2 class="slogan fr">-->
-        <!--做专业的前端平台，提供你需要的东西-->
-        <!--<br>解放你的收藏夹，让它们只做最重要的事情</h2>-->
+        <!--  -->
+        <!--<br>  </h2>-->
     </header>
     <!-- 头部 ]] -->
     <!-- 内容区 [[ -->
@@ -49,15 +49,12 @@
           <p class="tips">温馨提示：为了您的体验更佳，请在PC端使用</p>
           <article class="mainarea item" style="display: block; min-height: 314px;">
                 <section class="mod">
-                    <h3>手册</h3>
+                    <h3>第一章 基础知识</h3>
                     <section class="sub_mod">
                         <h4 class="sub_title">HTML</h4>
                         <ul>
                             <li>
-                              <a href="http://www.jb51.net/onlineread/htmlchar.htm" target="_blank">Html特殊字符编码对照表</a>
-                            </li>
-                            <li>
-                              <a href="http://www.inmotionhosting.com/img/infographics/html5_cheat_sheet_tags.png" target="_blank">HTML5标签速查</a>
+                              <a href="pages/c1.html" target="_blank">基础知识</a>
                             </li>
                         </ul>
                     </section>
