Just kept CNAME

--- a/pages/c1.html
+++ b/pages/c1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'/>
 <link href='..\libs\css\preview\dark.css' rel='stylesheet'></link>
-<link href='..\libs\css\codeblock\dark.css' rel='stylesheet'></link>
+<link href='..\libs\css\codeblock\arta.css' rel='stylesheet'></link>
 <title>MarkdownMate Preview</title>
 
 <script type='text/javascript' src='..\libs\highlight\highlight.pack.js'></script>
