--- a/libs/preview.html
+++ b/libs/preview.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8'/>
-<title>MarkdownMate Preview</title>
+<title>Aphey's Record</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <script type='text/javascript' src='jquery/jquery-1.11.3.min.js'></script>
 <script type='text/javascript' src='es5/es5-shim.min.js' ></script>
