Just kept CNAME

--- a/index.html
+++ b/index.html
@@ -1661,7 +1661,7 @@
         <aside class="sidebar col-sub">
               <ul class="sidebar_list radius">
                     <li class="cur">
-                      <a href="javascript:scroll(0,0);">运维知识</a>
+                      <a href="javascript:scroll(0,0);">Linux知识</a>
                     </li>
                     <li class="cur">
                       <a href="javascript:scroll(0,0);">手册/工具</a>
