Just kept CNAME

--- a/pages/c1.html
+++ b/pages/c1.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'/>
 <link href='..\libs\css\preview\dark.css' rel='stylesheet'></link>
 <link href='..\libs\css\codeblock\arta.css' rel='stylesheet'></link>
-<title>MarkdownMate Preview</title>
+<title>Aphey's Records</title>
 
 <script type='text/javascript' src='..\libs\highlight\highlight.pack.js'></script>
 <script type='text/javascript' src='..\libs\mm\mm_toc.js'></script>
