Just kept CNAME

--- a/index.html
+++ b/index.html
@@ -1663,7 +1663,7 @@
                     <li class="cur">
                       <a href="javascript:scroll(0,0);">Linux知识</a>
                     </li>
-                    <li class="cur">
+                    <li class="">
                       <a href="javascript:scroll(0,0);">手册/工具</a>
                     </li>
                     <li class="">
@@ -1695,7 +1695,7 @@
         <nav class="footer_nav">
           <ul>
             <li class="contact clearfix">
-            <a href="https://shop60459643.taobao.com" target="_blank" class="author_img_blog fl">
+            <a href="http://aphey.wang" target="_blank" class="author_img_blog fl">
                 <cite class="author">
                   <img src="res/author.png" alt="灵感_idea">
                 </cite>
