Just kept CNAME

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </ul>
                     </section>
           </article>
-          <article class="mainarea item" style="display: block; min-height: 314px;">
+          <article class="mainarea item" style="display: none; min-height: 314px;">
             <section class="mod">
                 <h3>手册</h3>
                 <section class="sub_mod">
@@ -1697,7 +1697,7 @@
             <li class="contact clearfix">
             <a href="http://aphey.wang" target="_blank" class="author_img_blog fl">
                 <cite class="author">
-                  <img src="res/author.png" alt="灵感_idea">
+                  <img src="res/author.png" alt="Aphey">
                 </cite>
               </a>
               <section class="contact_cont fl">
