Just kept CNAME

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="description" content="记录我的学习历程">
   <meta name="author" content="苏北阿飞">
-  <link rel="shortcut icon" href="res/favicon.ico">
-  <title>MSR</title>
+  <link rel="shortcut icon" href="res/author.png">
+  <title>Aphey's Website</title>
   <script src="http://hm.baidu.com/hm.js?a75b20e2c0f722c6e4bf18380088449f"></script><script src="res/html5shiv.js"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link type="text/css" rel="stylesheet" href="res/reset.css">
@@ -1701,13 +1701,16 @@
                 </cite>
               </a>
               <section class="contact_cont fl">
-                  <span>联系我</span>
-              <p class="author_info"><span>宝贝链接：</span><a href="https://item.taobao.com/item.htm?_u=iasee3pca27&id=521156453516">Web前端视频教程</a></p>
+                  <!--<span></span>-->
+                  <a href="https://weibo.com/aphey">我的微博</a>
+              <p class="author_info"><span></span>
+                  <a href="http://aphey.lofter.com">我的乐乎</a>
+              </p>
               <!-- <p class="author_info"><span>个人博客：</span><a href="http://ideazhao.com/" target="_blank">http://ideazhao.com/</a></p> -->
               </section>
             </li>
             <li>
-              <a href="https://shop60459643.taobao.com" class="link_about">关于本站</a>
+              <a href="http://aphey.wang" class="link_about">关于本站</a>
               <p>本站涉及一些优秀攻城狮的优秀博客、社区，实用的手册、工具、框架/库，以及在线教程和书籍推荐。为大家解决一些基本的，常见的问题和需求。</p>
             </li>
           </ul>
