--- a/pages/c1.html
+++ b/pages/c1.html
@@ -77,7 +77,7 @@ MathJax.Hub.Config({
 <li>sh 默认shell,bourn开发的)</li><li>bash bourn again shell遵循GPL)</li><li>zsh</li><li>ksh</li><li>tcsh (cshell升级版本)</li></ul>
 </li></ul>
 </li><li>Linux切换用户命令: <code>su</code></li><li>命令类型:内置命令(shell内置)和外部命令(在文件系统的某一个路径下与命令名称相应的可执行文件,别名除外)</li><li>区别命令是内部还是外部的命令<code>type</code>:显示命令属于那种类型;<code>type COMMAND</code></li><li>命令选项中括号的意思<ul>
-<li style="list-style: none"><input type="checkbox" disabled> 表示可选</li><li>| 表示多选一或者多选</li><li>&lt; &gt; 表示必选    </li><li>... 可以出现多次</li><li>{ } 表示分组</li></ul>
+<li>[ ]表示可选</li><li>| 表示多选一或者多选</li><li>&lt; &gt; 表示必选    </li><li>... 可以出现多次</li><li>{ } 表示分组</li></ul>
 </li><li>命令的选项:开启或关闭命令的某些功能,Unix以前有systemv 和BSD俩分支,system必须要加<code>-</code>,BSD可以不加</li><li>LSB:Linux Standard Base</li><li>获得命令帮助:<ul>
 <li>内部命令:<ul>
 <li>help COMMAND 比如 help cd,这是最简洁的方式</li><li>COMMAND -h 这个不常用</li></ul>
